--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "@angular/router": "^15.0.4",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
-    "rxjs": "~6.6.0",
+    "jquery": "^3.6.2",
+    "rxjs": "^7.8.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.11.8"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "^15.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~3.6.0",
-    "jasmine-spec-reporter": "~5.0.0",
+    "@types/jasmine": "^4.3.1",
+    "@types/node": "^18.11.16",
+    "jasmine-core": "^4.5.0",
+    "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.4.1",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-chrome-launcher": "^3.1.1",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
+    "ts-node": "^10.9.1",
     "tslint": "~6.1.0",
     "typescript": "^4.8.4"
   }
