--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^4.6.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.6.2",
     "rxjs": "^7.8.0",
@@ -42,6 +42,6 @@
     "protractor": "~7.0.0",
     "ts-node": "^10.9.1",
     "tslint": "~6.1.0",
-    "typescript": "^4.8.4"
+    "typescript": "~4.8.4"
   }
 }
