--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@angular/compiler-cli": "^15.0.4",
     "@types/jasmine": "^4.3.1",
     "@types/node": "^18.11.16",
-    "@typescript-eslint/eslint-plugin": "5.44.0",
-    "@typescript-eslint/parser": "5.44.0",
+    "@typescript-eslint/eslint-plugin": "^5.46.1",
+    "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.28.0",
     "jasmine-core": "^4.5.0",
     "jasmine-spec-reporter": "^7.0.0",
