--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "resolutions": {
+    "css-select": "4.2.1"
+  },
   "dependencies": {
     "@angular/animations": "^15.0.4",
     "@angular/common": "^15.0.4",
@@ -19,9 +22,9 @@
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
     "@angular/router": "^15.0.4",
-    "bootstrap": "^4.6.2",
+    "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "jquery": "^3.6.2",
+    "ng2-tooltip-directive": "^2.10.3",
     "rxjs": "^7.8.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.12.0"
@@ -36,7 +39,7 @@
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "^15.0.4",
     "@types/jasmine": "^4.3.1",
-    "@types/node": "^18.11.16",
+    "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.46.1",
     "@typescript-eslint/parser": "^5.46.1",
     "eslint": "^8.28.0",
