--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@popperjs/core": "^2.11.7",
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
-    "ng2-tooltip-directive": "^2.10.3",
+    "ng2-tooltip-directive-ngfix": "^16.1.2",
     "rxjs": "^7.8.0",
     "tslib": "^2.0.0",
     "zone.js": "^0.13.0"
